# mantiumclient-py

./: .flake8  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  SECURITY.md  example_client.py  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md  CoC.md
.github/templates/: bug_pr_template.md  docs_pr_template.md  feature_pr_template.md  issue_template.md  pr_template.md
.github/workflows/: codeql-analysis.yml
mantiumapi/: Ai21.py  Cohere.py  Mantium.py  OpenAi.py  __init__.py  ai_engines.py  ai_methods.py  apikey.py  client.py  engine_id_values.py  execute.py  files.py  intelet.py  intelet_prompt.py  license.py  licenses.py  log.py  organization.py  prompt.py  prompt_execution.py  security.py  tag.py  utils.py  version.py
mantiumapi/tests/: test_ai_engines.py  test_ai_method.py  test_auth.py  test_intelet.py  test_log.py  test_prompt.py
tests/: test_ai_engines.py  test_ai_method.py  test_apikey.py  test_auth.py  test_intelet.py  test_log.py  test_prompt.py
