[tool.poetry]
name = "mantiumclient-py"
version = "0.1.0"
description = "Python Client for the Mantium API"
authors = ["Mantium <support@mantiumai.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jsonapi-requests = "^0.6.2"
requests = "^2.26.0"
PyJWT = "^2.3.0"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
